<resources>
    <string name="app_name">SBM-Engineer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="crash_toast_text">App crashed, click Send E-mail button to report issue</string>
    <string name="welcome">Welcome</string>
    <string name="set_your_swachh_bharath_in_nyour_favourite_language">Choose your preferred language</string>
    <string name="done">Done</string>
    <string name="welcomes_you_some_text_goes_here">Enter your mobile number</string>
    <string name="mobile_number_cannot_be_empty">Mobile number cannot be empty</string>
    <string name="mobile_number_must_begin_with_7_or_8_or_9">Mobile number must begin with 7 or 8 or 9</string>
    <string name="_10_digit_mobile_number">Mobile number</string>
    <string name="mobile_number_needs_10_digits">10 digit mobile number needed</string>
    <string name="mobile_verification">Verify</string>
    <string name="enter_verification_code_sent_to_">We\'ve sent a code to your number</string>
    <string name="you_are_changing_the_status_of_the_complaint_please_leave_a_comment_about_your_experience_or_if_you_have_any_remarks_you_can_add_photos_as_well_to_your_comment_">You\'re changing status of the complaint. Please leave a comment and you can add a photo as well.</string>
    <string name="comments_">Comments(</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="loading">Loading</string>
    <string name="resend_code_">Resend Code?</string>
    <string name="your_mobile_number_is_safe_with_us">Your mobile number is safe with us.</string>
    <string name="we_won_t_share_your_details_with_any_one">We won\'t share your details with anyone.</string>
    <string name="logout">Logout</string>
    <string name="report_bug">Report a Bug</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="_votes">" Votes"</string>
    <string name="_comments">" Comments"</string>
    <string name="you">You</string>
    <string name="vote_up">VOTE UP</string>
    <string name="mark_as_resolved">Mark as Resolved</string>
    <string name="voted_up">Voted up</string>
    <string name="previously_read">Previously read</string>
    <string name="load_more">Load More</string>
    <string name="mark_as_re_open">Mark as re-open</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="gallery">Gallery</string>
    <string name="select_an_option">Select an option</string>
    <string name="send">Send</string>
    <string name="comments">COMMENTS</string>
    <string name="empty_comment">Empty Comment</string>
    <string name="please_wait">Please wait</string>
    <string name="invalid_token_logging_out_">Invalid Token Logging Out!!!</string>
    <string name="null_response_from_web_service_api_">"Null Response from Web Service API "</string>
    <string name="no_complaints">No Complaints</string>
    <string name="no_read_notification">No read notification</string>
    <string name="internet_is_offline">Internet is Offline</string>
    <string name="no_data">No Data</string>
    <string name="_related_complaints">" Related Complaints"</string>
    <string name="high_priority">High Priority</string>
    <string name="re_opened">Re-opened</string>
    <string name="rejected">Rejected</string>
    <string name="please_upload_an_image_and_then_resolve_the_complaint_to_resolved">Please upload an image and then resolve the complaint to resolved</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="notification">"Notification "</string>
    <string name="no_complaints_for_">"No Complaints for "</string>
    <string name="all_complaints">All Complaints</string>
    <string name="high_priority_complaints">High Priority Complaints</string>
    <string name="on_the_job_complaints">On The Job Complaints</string>
    <string name="re_opened_complaints">Re-Opened Complaints</string>
    <string name="resolved_complaints">Resolved Complaints</string>
    <string name="rejected_complaints">Rejected Complaints</string>
    <string name="write_a_comment">Write a comment </string>
    <string name="rate_us_on_playstore">Rate Us on Playstore</string>
    <string name="reject">REJECT</string>
    <string name="on_the_job">On the job</string>
    <string name="resolved">Resolved</string>
    <string name="id_">"ID: "</string>
    <string name="change_status">Change Status</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="feedback">Feedback</string>
    <string name="get_started">NEXT</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="un_assigned_complaints">Un-Assigned Complaints</string>
    <string name="powered_by_">"powered by "</string>
    <string name="mobile_number_not_registered">Mobile Number Not Registered</string>
    <string name="registration">Registration</string>
    <string name="designation">Designation</string>
    <string name="send_your_details_for_the_registration_purpose">Send your details for the registration purpose</string>
    <string name="continue_">CONTINUE</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="ward">Ward Number</string>
    <string name="cancel">CANCEL</string>
    <string name="request">REQUEST</string>
    <string name="email_id">Email ID</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_details_are">Your details are successfully sent to the authorised people. We will get back to you soon</string>
    <string name="close">Close</string>
    <string name="send_your_details_for_regist">Send your details for the registration purpose</string>
    <string name="email_id_cannot_be_empty">Email ID Cannot be Empty</string>
    <string name="location_cannot_be_empty">Location Cannot be Empty</string>
    <string name="name_cannot_be_empty">Name Cannot be Empty</string>
    <string name="ward_number_cannot_be_empty">Ward Number Cannot be Empty</string>
    <string name="please_select_a_designation">Please select a designation</string>
    <string name="please_select_atleast_one_category">Please select atleast one category</string>
    <string name="invalid_email_id">Invalid Email ID</string>
    <string name="please_select_a_location_from_suggestion_only">Please select a location from suggestion only</string>
    <string name="name">Name</string>
    <string name="ward_eg_110_21_73_">Ward Eg:(110,21,73)</string>
    <string name="_complaints">Complaints</string>
    <string name="recentimages" translatable="false">Recent Images</string>
    <string name="image_size_exceeded" translatable="false">Image size is more than 8MB to upload, please select lesser memory size</string>
    <string name="select_an_image" translatable="false">Select an Image</string>
    <string name="tracking_id" translatable="false">UA-51350206-11</string>
</resources>
