<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/gr1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/high_priority"
            android:icon="@mipmap/ic_complaint_posted"
            android:title="@string/high_priority_complaints"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/on_the_job"
            android:icon="@mipmap/ic_complaint_posted"
            android:title="@string/on_the_job_complaints"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/resolved"
            android:icon="@mipmap/ic_complaint_posted"
            android:title="@string/resolved_complaints"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/rejected"
            android:icon="@mipmap/ic_complaint_posted"
            android:title="@string/rejected_complaints"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/re_opened"
            android:icon="@mipmap/ic_complaint_posted"
            android:title="@string/re_opened_complaints"
            app:actionViewClass="android.widget.TextView" />

    </group>

    <group
        android:id="@+id/gr2"
        android:checkableBehavior="single">


       <!-- <item
            android:id="@+id/public_toilet_nearby"
            android:icon="@mipmap/ic_wc_white_48dp"
            android:title="@string/public_toilet_nearby"
            app:actionViewClass="android.widget.TextView" />-->

        <item
            android:id="@+id/rate_us_on_playstore"
            android:icon="@mipmap/ic_star_half_white_48dp"
            android:title="@string/rate_us_on_playstore"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/report_bug"
            android:icon="@mipmap/ic_bug_report_white_48dp"
            android:title="@string/report_bug" />
        <item
            android:id="@+id/nav_privacypolicy"
            android:icon="@mipmap/ic_privacy_policy"
            android:title="Privacy policy" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_exit_to_app_white_48dp"
            android:title="Logout" />
    </group>
</menu>