<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="#f5f5f5">
  <View
    android:id="@+id/view1"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#e6e6e6" />
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/view1"
    android:layout_marginBottom="8dp"
    >

    <ImageView
      android:id="@+id/locateComplaint"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_alignParentLeft="true"
      android:layout_marginLeft="6dp"
      android:layout_marginRight="6dp"
      android:layout_weight="0.50"
      android:padding="8dp"
      android:scaleType="fitCenter"
      android:src="@mipmap/ic_location_detail"
      android:tint="@color/blue_fab_bg" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toLeftOf="@+id/navigateComplaint"
      android:layout_toRightOf="@+id/locateComplaint"
      android:orientation="vertical"
      android:weightSum="4">

      <TextView
        android:id="@+id/locationText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="14sp" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/address"
        android:textColor="#757575"
        android:textSize="12sp" />

      <TextView
        android:id="@+id/locationlandmark"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:text="@string/landmark"
        android:textColor="#757575"
        android:textSize="12sp"
        android:visibility="gone" />
    </LinearLayout>

    <ImageView
      android:id="@+id/navigateComplaint"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_alignLeft="@+id/complaint_category"
      android:layout_alignRight="@+id/complaint_category"
      android:layout_alignParentRight="true"
      android:layout_marginLeft="6dp"
      android:layout_marginRight="6dp"
      android:layout_weight="0.50"
      android:padding="8dp"
      android:scaleType="fitCenter"
      android:src="@mipmap/ic_directions"
      android:tint="@color/blue_fab_bg" />

  </RelativeLayout>
</RelativeLayout>