<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"  >

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/language_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:elevation="8dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
              android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
              android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/set_your_swachh_bharath_in_nyour_favourite_language"
                android:textColor="@color/lt_gray"
                android:textSize="14sp" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#E6E6E6" />

            <ListView
                android:id="@+id/sp_language"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:cacheColorHint="@color/transparent"
                android:listSelector="@color/blue_pressed_bottom"
                android:scrollbars="none"
                android:divider="#E6E6E6"
                android:dividerHeight="1dp">

            </ListView>

            <Button
                android:id="@+id/done"
                style="?android:attr/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/signup_with_fb_bg"
                android:padding="16dp"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible"
                android:maxLines="1"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>