<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/parentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" android:visibility="visible" >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:titleTextColor="@color/white"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/white"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">


            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/toolbar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mobileVerification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/mobile_verification"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/enterotp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:textColor="@color/lt_gray"
                        android:textSize="14sp"/>

                    <com.mukesh.OtpView
                        android:id="@+id/otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:hint="@string/enter_otp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        app:otp=""/>

                    <TextView
                        android:id="@+id/resendCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:gravity="center"
                        android:text="@string/resend_code_"
                        android:textColor="#0980f4"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <com.andexert.library.RippleView
                        android:id="@+id/rippleView"
                        rv_centered="true"
                        android:layout_width="match_parent"
                        android:layout_height="?android:actionBarSize"
                        android:layout_margin="16dp"
                        >

                        <Button
                            android:id="@+id/done"
                            style="?android:attr/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/signup_with_fb_bg"
                            android:maxLines="1"
                            android:padding="16dp"
                            android:text="@string/done"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="16sp"/>
                    </com.andexert.library.RippleView>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
</RelativeLayout>